Fixes Bug #54441 (Handling of changing modifiers on a trait alias) # this now results also in a compilation error, since it would open the door for inconsistencies, and violates the DRY principle.